@@ -1,5 +1,11 @@
 2003-01-27  Dom Lachowicz <cinamod@hotmail.com>
 
+	* rsvg.c (): Patheticly handle conical gradients (not part of SVG spec,
+	but that doesn't stop KIllustrator/Kontour...), work on 
+	gradientTransform as well as spreads on radialGradients	
+	
+2003-01-27  Dom Lachowicz <cinamod@hotmail.com>
+
 	* *: Fix a bunch of brokenness caused by Sodipodi's handling of gradients. Output still doesn't look quite right, though, unfortunately....
 	
 2003-01-26  Dom Lachowicz <cinamod@hotmail.com>
